<resources>
    <string name="app_name">SVR InfoTech</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Email-id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="userName">Name</string>
    <string name="mobile">Mobile No</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="signupTitle"><b><u>Please Fill All Details</u></b></string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="eventImage">Event Post</string>
    <string name="likeImage">Like/Dislike</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="post">POST</string>
    <string name="admissionForm"><b><u>ADMISSION FORM</u></b></string>
    <string name="stud_name">STUDENT NAME</string>
    <string name="doj">DATE OF JOINING</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="dobDate">DATE FROM CALENDER</string>
    <string name="dojDate">DATE FROM CALENDER</string>
    <string name="totalAdmissions">TOTAL ADMISSIONS</string>
    <string name="totalCollection">TOTAL COLLECTION</string>
    <string name="serchByName">SEARCH BY NAME</string>
    <string name="contact">CONTACT NO</string>
    <string name="gender">GENDER : </string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="email">EMAIL-ID</string>
    <string name="qualification">QUALIFICATION</string>
    <string name="course">COURSE</string>
    <string name="fee">COURSE FEE</string>
    <string name="duration">DURATION</string>
    <string name="joining">JOINING</string>
    <string name="save">SAVE</string>
    <string name="joiningFor">JOINING FOR</string>
    <string name="subjectTitle"><b><u>SUBJECTS</u></b></string>
    <string name="nowPaying">Now Paying : </string>
    <string name="update">UPDATE</string>
    <string name="add_post">ADD POST</string>

    <string name="faculty">Course Name</string>
    <string name="totalFee">Total Fee</string>
    <string name="feeCollected">Fee Collected</string>
    <string name="due">Fee Due</string>

    <string name="setStatus">Status &amp; Subject</string>
    <string name="status">Status : </string>
    <string name="courses">Courses : </string>

    <string name="setSyllabus">Set Syllabus</string>
    <string name="subjectName">Subject Name : </string>
    <string name="topicName">Topic Name : </string>
    <string name="topic">Add Topic</string>

    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="uploadProgressData">Upload File</string>
    <string name="downloadFile">Download File</string>
    <string name="browse">Browse</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="uploadFileAs">File Name</string>
    <string name="feeStatus">Fee Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
