<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding10"
    android:id="@+id/uploadProgressLayout"
    tools:context=".UploadProgressData">

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse"/>

        <EditText
            android:id="@+id/fileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <EditText
        android:id="@+id/uploadFileAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uploadFileAs"
        android:layout_marginTop="@dimen/margin5"/>

    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:layout_marginTop="@dimen/padding10"
        android:text="@string/upload"/>

</LinearLayout>