<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setSyllabusLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding10"
    tools:context=".SetSyllabus">

    <LinearLayout
        android:id="@+id/subjectDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjectName"/>

        <Spinner
            android:id="@+id/subjectList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/topicLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/subjectDropDown"
        android:layout_marginTop="@dimen/padding10">

        <TextView
            android:id="@+id/topicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topicName"/>

        <EditText
            android:id="@+id/topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/addTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topicLayout"
        android:layout_marginTop="@dimen/padding10"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_btn"
        android:text="@string/topic"/>



</RelativeLayout>